--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "adani",
+  "name": "adani-rag-pdf",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "RAG-based PDF Conversational Agent using Gemini and Pinecone",
   "type": "module",
+  "scripts": {
+    "index": "node src/index.js",
+    "chat": "node src/chat.js"
+  },
   "dependencies": {
-    "@langchain/groq": "^1.0.3",
-    "dotenv": "^17.2.3",
-    "groq-sdk": "^0.37.0"
+    "dotenv": "^16.4.5",
+    "langchain": "^0.2.14",
+    "@langchain/community": "^0.2.33",
+    "@langchain/google-genai": "^0.0.16",
+    "@langchain/pinecone": "^0.0.6",
+    "@pinecone-database/pinecone": "^2.0.2",
+    "@google/generative-ai": "^0.17.1"
   }
 }
